# mfat

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FAT.md  LICENSE  README.md  mfat.c  mfat.h
examples/: CMakeLists.txt  fatcat.c  fatdir.c  fatstat.c
